# nawafshrf

./: .env.example  .mcp.json  Dockerfile  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  supabase-schema.sql
.github/: PRIVACY_GUIDE.md
.github/workflows/: check-repo-visibility.yml
app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
app/dashboard/: page.tsx
app/pricing/: page.tsx
app/publish/: page.tsx
app/templates/: page.tsx
components/layout/: footer.tsx  header.tsx
components/templates/: template-card.tsx
components/tools/: tool-card.tsx  tool-interface.tsx
components/ui/: badge.tsx  button.tsx  card.tsx
lib/: auth.ts  openai.ts  rate-limit.ts  stripe.ts  supabase.ts  templates-config.ts  tools-config.ts
notebooks/: getting_started.ipynb
powerbi-desktop-mcp/: .env.example  pyproject.toml
powerbi-desktop-mcp/src/powerbi_desktop_mcp/: __init__.py  desktop.py  server.py
powerbi-desktop-mcp/src/powerbi_desktop_mcp/tools/: __init__.py  canvas.py  file_ops.py  interactions.py  ribbon.py  views.py
powerbi-mcp-extended/: .env.example  pyproject.toml
powerbi-mcp-extended/src/powerbi_mcp/: __init__.py  auth.py  client.py  config.py  server.py
powerbi-mcp-extended/src/powerbi_mcp/tools/: __init__.py  ai_assistant.py  analysis.py  dashboards.py  datasets.py  dax.py  report_builder.py  reports.py  workspaces.py
products/: README.md
products/01-wall-art-bundle/: README.md
products/02-budget-planner/: README.md  budget-planner-dusty-blue.html  budget-planner-lavender.html  budget-planner-neutral.html  (+2 more)
(+13 files in other folders)
